simple changes of comments

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Jednoręki bandyta</title>
+  <title>Gra Typu Jednoręki bandyta</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <div class="wrap">
 
-    <h1>Jednoręki bandyta</h1>
+    <h1>Jednoręki bandyta - spróbuj szczęścia</h1>
 
     <section class="game">
       <div class="color"></div>
@@ -21,7 +21,7 @@
     </section>
 
     <section class="play">
-      <input type="number" placeholder="Podaj stawkę" id="bid">
+      <input type="number" placeholder="Podaj stawkę zakładu" id="bid">
       <button id="start">Zakręć!</button>
     </section>
 
