--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="wrap">
 
-    <h1>Jednoręki bandyta - spróbuj szczęścia</h1>
+    <h1>Jednoręki bandyta - spróbuj swojego szczęścia</h1>
 
     <section class="game">
       <div class="color"></div>
