--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </section>
 
     <section class="play">
-      <input type="number" placeholder="Podaj stawkę zakładu" id="bid">
+      <input type="number" placeholder="Podaj stawkę" id="bid">
       <button id="start">Zakręć!</button>
     </section>
 
@@ -33,7 +33,9 @@
     </section>
 
   </div>
-  <script src="game.js"></script>
+  <script src="Wallet.js"></script>
+  <script src="Game.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
