--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   </div>
   <script src="Wallet.js"></script>
-  <script src="statistics.js"></script>
+  <script src="Statistics.js"></script>
   <script src="Draw.js"></script>
   <script src="Result.js"></script>
   <script src="Game.js"></script>
